# native_nvcp_toggle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  native_nvcp_config.ini  native_nvcp_toggle.c  native_nvcp_toggle.rc
